--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Home
   <h1 class="pageTitle">Recent Posts</h1>
   <ul class="posts noList">
     {% for post in paginator.posts %}
-	<div style="display:block" onmouseover="this.style.background='#EAECEE';this.style.cursor='pointer'" onmouseout="this.style.background='white';">
+	<div style="display:block;border-radius:1.5%" onmouseover="this.style.background='#EAECEE';this.style.cursor='pointer'" onmouseout="this.style.background='white';">
 	<div style="margin:2%">	 
 	<li>
         <span class="date">{{ post.date | date: '%B %d, %Y' }}</span>
